<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout android:id="@+id/butonlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:backgroundTint="#00BCD4"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_18"
                android:textSize="40dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton1"
                android:layout_margin="10dp"
                android:backgroundTint="#FF5722"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_19"
                android:textSize="40dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton2"
                android:layout_margin="10dp"
                android:backgroundTint="#FF5722"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_20"
                android:textSize="40dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton3"
                android:layout_margin="10dp"
                android:backgroundTint="#FF5722"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_13"
                android:textSize="40dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton4"
                android:layout_margin="10dp"
                android:backgroundTint="#FF5722"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_1"
                android:textSize="40dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton5"
                android:layout_margin="10dp"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_2"
                android:textSize="40dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton6"
                android:layout_margin="10dp"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_3"
                android:textSize="40dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton7"
                android:layout_margin="10dp"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_14"
                android:textSize="40dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton8"
                android:layout_margin="10dp"
                android:backgroundTint="#FF5722"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_4"
                android:textSize="40dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton9"
                android:layout_margin="10dp"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_5"
                android:textSize="40dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton10"
                android:layout_margin="10dp"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_6"
                android:textSize="40dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton11"
                android:layout_margin="10dp"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_15"
                android:textSize="40dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton12"
                android:backgroundTint="#FF5722"
                android:layout_margin="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_7"
                android:textSize="40dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton13"
                android:layout_margin="10dp"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_8"
                android:textSize="40dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton14"
                android:layout_margin="10dp"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_9"
                android:textSize="40dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton15"
                android:layout_margin="10dp"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_16"
                android:textSize="40dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton16"
                android:backgroundTint="#FF5722"
                android:layout_margin="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_12"
                android:textSize="50dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton17"
                android:layout_margin="10dp"
                android:backgroundTint="#FF9800"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_0"
                android:textSize="40dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton18"
                android:layout_margin="10dp"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_17"
                android:textSize="40dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton19"
                android:layout_margin="10dp"
                android:backgroundTint="#9C27B0"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cornerRadius="80dp"
                android:textColor="@color/white"
                android:text="@string/button_text_11"
                android:textSize="40dp"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:id="@+id/buton20"
                android:layout_margin="10dp"
                android:backgroundTint="#03A9F4"
                />

        </LinearLayout>
    </LinearLayout>





</RelativeLayout>



